refactor(properties): migrate to v2 properties