@@ -1,7 +1,9 @@
 package io.kestra.plugin.kafka;
 
+
 import com.google.common.collect.ImmutableMap;
 import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.repositories.LocalFlowRepositoryLoader;
@@ -65,7 +67,7 @@ class TriggerTest {
                 AbstractScheduler scheduler = new JdbcScheduler(
                     this.applicationContext,
                     this.flowListenersService
-                );
+                )
             ) {
                 // wait for execution
                 Flux<Execution> receive = TestsUtils.receive(executionQueue, execution -> {
@@ -76,11 +78,11 @@ class TriggerTest {
                 Produce task = Produce.builder()
                     .id(TriggerTest.class.getSimpleName())
                     .type(Produce.class.getName())
-                    .properties(Map.of("bootstrap.servers", this.bootstrap))
-                    .serdeProperties(Map.of("schema.registry.url", this.registry))
-                    .keySerializer(SerdeType.STRING)
-                    .valueSerializer(SerdeType.STRING)
-                    .topic("tu_trigger")
+                    .properties(Property.of(Map.of("bootstrap.servers", this.bootstrap)))
+                    .serdeProperties(Property.of(Map.of("schema.registry.url", this.registry)))
+                    .keySerializer(Property.of(SerdeType.STRING))
+                    .valueSerializer(Property.of(SerdeType.STRING))
+                    .topic(Property.of("tu_trigger"))
                     .from(List.of(
                         ImmutableMap.builder()
                             .put("key", "key1")
@@ -99,7 +101,7 @@ class TriggerTest {
                 repositoryLoader.load(Objects.requireNonNull(TriggerTest.class.getClassLoader()
                     .getResource("flows/trigger.yaml")));
 
-                task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+                task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
                 boolean await = queueCount.await(1, TimeUnit.MINUTES);
                 assertThat(await, is(true));
